Fix the dropdown lines alignment

--- a/configuration-ui/src/assets/css/common.less
+++ b/configuration-ui/src/assets/css/common.less
@@ -61,6 +61,7 @@ body {
             width: 100px;
             overflow: hidden;
             text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .statsIcon {
